# hexchat-haskell

./: HexChat.hs  LICENSE  hexchat.cabal
HexChat/: Internal.hs
plugin/: plugin.c
plugin/HexChat/: Linker.hs
